Final edits for submission. Added to results

--- a/Lab01-Initial Value Problems.ipynb
+++ b/Lab01-Initial Value Problems.ipynb
@@ -746,7 +746,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The calculated slope is m = 1.015096 which suggests that the rate of convergence is linear of order O(h)."
+    "The calculated slope is m = 1.015096 which suggests as dt is reduced, the error is going to zero. More precisely, the error goes down by a factor of 2 every time dt is halved. Therefore, the rate of convergence is linear of order O(dt)."
    ]
   },
   {
@@ -973,7 +973,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The calculated slope is m = 0.985037 which suggests that the rate of convergence is linear of order O(h)."
+    "The calculated slope is m = 0.985037 which suggests as dt is reduced, the error is going to zero. More precisely, the error goes down by a factor of 2 every time dt is halved. Therefore, the rate of convergence is linear of order O(dt)."
    ]
   }
  ],
